--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@
 /* Define colors*/
 @layer base {
   :root{
-    --backgound: 210 40% 98%;
+    --background: 210 40% 98%;
     --foreground: 222 47% 11%;
     
     --card: 0 0% 100%;
@@ -89,7 +89,7 @@
   }
 
   .dark {
-    --backgound: 222 47% 4%;
+    --background: 222 47% 4%;
     --foreground: 213 31% 91%;
     
     --card: 222 47% 8%;
