Finish about me section; Dummy text TODO

--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@
 
 @utility gradient-border {
   @apply relative rounded-md;
-  background: liinear-gradient(to right, hsl(var(--card)), hsl(var(--card)));
+  background: linear-gradient(to right, hsl(var(--card)), hsl(var(--card)));
   background-clip: padding-box;
   border:1px  solid transparent;
 }
